# simple-notepad

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
