[package]
name = "simple-notepad"
version = "1.0.0"
description = "A simple notepad application"
authors = ["you"]
license = ""
repository = ""
default-run = "simple-notepad"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
